--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,10 @@ services:
     image: postgres:14-alpine3.14
     restart: always
     environment:
-      POSTGRES_DB: 'godtask'
-      POSTGRES_USER: 'godtask'
-      POSTGRES_PASSWORD: 'godtask'
+      POSTGRES_DB: "godtask"
+      POSTGRES_USER: "godtask"
+      POSTGRES_PASSWORD: "godtask"
     ports:
-      - '5432:5432'
+      - "5432:5432"
     expose:
-      - '5432'
+      - "5432"
